Fix Ogg/Vorbis support because HAVE_VORBIS is no longer set to 2 (since as far as I can see, the change to cmake) See http://lists.kde.org/?l=kde-multimedia&m=134903246822765

Based on patches by the following people
CCMAIL: info@pc-tiede.de
CCMAIL: artjom.simon@gmail.com

BUG: 322370
FIXED-IN: 4.11.1